[gd_scene load_steps=4 format=3 uid="uid://dhwl5p33jvcd2"]

[ext_resource type="Script" path="res://Scripts/Game/CampaignSelect/CampaignSelectController.gd" id="1_uyake"]
[ext_resource type="Script" path="res://Scripts/Game/CampaignSelect/State/CampaignSelectEmptyState.gd" id="2_0skp8"]
[ext_resource type="Script" path="res://Scripts/Game/CampaignSelect/State/CampaignSelectStartState.gd" id="3_sahy0"]

[node name="CampaignSelectController" type="Node2D"]
script = ExtResource("1_uyake")

[node name="States" type="Node2D" parent="."]

[node name="CampaignSelectEmptyState" type="Node2D" parent="States"]
script = ExtResource("2_0skp8")

[node name="CampaignSelectStartState" type="Node2D" parent="States"]
script = ExtResource("3_sahy0")
